--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Autour+One&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300;400;800;900&family=Sora:wght@500;600&display=swap');
+
+
 body {
   background-color: rgb(0, 0, 38) !important;
   color: white !important;
@@ -5,4 +8,9 @@ body {
 .back {
   background-color: rgb(0, 0, 38) !important;
   color: white !important;
+}
+
+body
+{
+  font-family: 'Autour One', cursive;
 }
