--- a/src/Compounent/Navbar/Navbar.css
+++ b/src/Compounent/Navbar/Navbar.css
@@ -23,3 +23,14 @@ img.drop {
   height: 25px;
   margin-right: 10px !important;
 }
+
+.nav-item a:hover
+{
+  color: #38b6ff !important;
+  text-shadow: 14px 14px 40px #38b6ff;
+}
+
+.tw:hover
+{
+  background-color: #38b6ff !important;
+}
