--- a/src/Compounent/Navbar/Navbar.css
+++ b/src/Compounent/Navbar/Navbar.css
@@ -30,6 +30,12 @@ img.drop {
   text-shadow: 14px 14px 40px #38b6ff;
 }
 
+.nav-item a.active
+{
+  color: #38b6ff !important;
+  text-shadow: 14px 14px 40px #38b6ff;
+}
+
 .tw:hover
 {
   background-color: #38b6ff !important;
