--- a/src/Compounent/Hero/Hero.css
+++ b/src/Compounent/Hero/Hero.css
@@ -51,14 +51,14 @@
     border-radius: 6px;
     border: none;
     color: white;
-    background-color: #1E2559;
+    background-color: #1B2155;
     transition: color, background-color 2s ease;
 }
 
 .HeroButton:hover {
-    color: #1E2559;
-    background-color: #38B6FF;
-    box-shadow: 6px 6px 40px #38B6FF;
+    color: #1B2155;
+    background-color: #0C6EFD;
+    box-shadow: 4px 4px 20px #0C6EFD;
     transition: all 1s;
 }
 
@@ -106,12 +106,11 @@
     font-family: 'Inter', sans-serif;
     letter-spacing: 2px;
     text-align: justify;
-
 }
 
 
 .InfoCard:hover {
-    background-color: #38B6FF;
+    background-color: #1B2155;
     border-radius: 6px;
 }
 
