--- a/src/Compounent/Navbar/Navbar.css
+++ b/src/Compounent/Navbar/Navbar.css
@@ -2,20 +2,24 @@
   margin-left: 29px !important;
   color: white !important;
 }
+
 .primary {
   background-color: blue !important;
   font-size: 15px !important;
   height: 37px !important;
   color: white !important;
 }
+
 .btnnn {
   font-size: 15px !important;
-  outline: 1px solid rgba(113, 113, 113, 0.572) !important;
+  outline: 1px solid #1E2559 !important;
   height: 37px !important;
   color: white !important;
+  background-color: #1E2559;
 }
+
 .btnnn:hover {
-  background-color: rgba(252, 253, 253, 0.256) !important;
+  background-color: #1E2559 !important;
 }
 
 img.drop {
@@ -24,19 +28,40 @@ img.drop {
   margin-right: 10px !important;
 }
 
-.nav-item a:hover
-{
+.dp-toogle {
+  background-color: #0C6EFD !important;
+}
+
+.dp-menu {
+  background-color: #1E2559 !important;
+  font-size: 15px;
+  padding: 0;
+  overflow: hidden;
+}
+
+.dp-menu .dp-item {
+  border-bottom: 1px solid #747aae;
+  padding: 10px;
+}
+
+.dp-menu .dp-item:last-child {
+  border: none;
+}
+
+.dp-menu .dp-item:hover {
+  background-color: #0C6EFD !important;
+}
+
+.nav-item a:hover {
   color: #38b6ff !important;
   text-shadow: 14px 14px 40px #38b6ff;
 }
 
-.nav-item a.active
-{
+.nav-item a.active {
   color: #38b6ff !important;
   text-shadow: 14px 14px 40px #38b6ff;
 }
 
-.tw:hover
-{
+.tw:hover {
   background-color: #38b6ff !important;
 }
