--- a/src/Compounent/Hero/Hero.css
+++ b/src/Compounent/Hero/Hero.css
@@ -2,25 +2,29 @@
 
 .Hero {
     width: 100%;
-
+    overflow: hidden;
 }
 
 .HeroBg {
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 110vh;
-    overflow: hidden;
 }
 
-.VideoBg {
+.HeroBg .VideoBg {
+    width: 100%;
+    height: 100%;
     position: absolute;
     inset: 0;
+    object-fit: cover;
 }
 
 .videoOverLay {
+    width: 100%;
     position: absolute;
     inset: 0;
     text-align: center;
+    margin: auto;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
@@ -30,7 +34,6 @@
 .videoContent {
     width: 70%;
     transition: all 2s ease;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,7 +66,7 @@
 }
 
 .Info {
-    width: 80%;
+    width: 90%;
     margin: 80px auto;
     /* text-align: center; */
 }
@@ -74,22 +77,21 @@
 }
 
 .Info p {
-    font-size: 16px;
+    font-size: 15px;
     font-family: 'Inter', sans-serif;
-    letter-spacing: 2px;
+    letter-spacing: 0.1ch;
     text-align: justify;
 }
 
 .InfoCards {
     display: flex;
     width: 100%;
-    height: 370px;
     justify-content: space-around;
 }
 
 .InfoCard {
     width: 30%;
-    height: 100%;
+    height: 300px;
     text-align: center;
     padding: 30px;
     transition: all 0.4s;
@@ -97,14 +99,13 @@
 
 .InfoCard h2 {
     font-size: 23px;
-    height: 30%;
+    height: 25%;
 }
 
 .InfoCard p {
     font-size: 14px;
-    height: 60%;
     font-family: 'Inter', sans-serif;
-    letter-spacing: 2px;
+    letter-spacing: 0.1ch;
     text-align: justify;
 }
 
@@ -114,20 +115,12 @@
     border-radius: 6px;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1050px) {
-    .VideoBg {
+@media only screen and (max-width: 768px) {
+    .HeroBg {
         height: 100vh;
-        width: 100%;
-        margin: 0px;
-    }
-
-    .videoOverLay {
-        height: 52vh;
-        padding: 250px 0px;
     }
 
     .Info {
-        width: 90%;
         line-height: 1cm;
         letter-spacing: 2px;
     }
@@ -155,15 +148,9 @@
     }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 900px) {
-    .VideoBg {
-        height: 30vh;
-        margin: 0px;
-    }
-
-    .videoOverLay {
-        height: 38vh;
-        padding: 125px 0px;
+@media only screen and (max-width: 480px) {
+    .HeroBg {
+        height: 70vh;
     }
 
     .videoContentRender h1 {
@@ -218,7 +205,5 @@
     .InfoCard p {
         font-size: 13px;
     }
-
-
 
 }
