--- a/src/Compounent/LogIn/LogIn.css
+++ b/src/Compounent/LogIn/LogIn.css
@@ -1,6 +1,13 @@
+.logo {
+    width: 125px;
+    height: 10vh;
+    object-fit: cover;
+    padding: 5px 0 0 20px;
+}
+
 .auth_layout {
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     max-height: auto;
     display: flex;
     align-items: center;
@@ -10,7 +17,7 @@
     width: 50%;
 }
 
-.logo_container{
+.logo_container {
     width: 340px;
     display: flex;
     flex-direction: column;
@@ -18,9 +25,6 @@
     align-items: center;
 }
 
-.logo_container img{
-    width: 120px;
-}
 
 .image-container img {
     width: 80%;
@@ -40,6 +44,11 @@ form.loginForm {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    /* border: 3px solid red; */
+}
+
+form.loginForm .header {
+    width: 90%;
 }
 
 form.loginForm .header p {
@@ -110,6 +119,7 @@ form.loginForm .forgot-password span:hover {
 }
 
 form.loginForm .checkbox-row {
+    width: 340px;
     display: flex;
     align-items: center;
     align-items: center;
@@ -270,118 +280,58 @@ form.loginForm .checkbox-row input#remember:checked::before {
     align-items: center;
 }
 
-/* @media only screen and (max-width:768px) {
+@media only screen and (max-width:768px) {}
 
-    .loginDiv {
-        flex-direction: column;
-        margin-top: 300px;
-        height: 100%;
+@media only screen and (max-width: 480px) {
+
+    .image-container {
+        display: none;
     }
 
-    .login {
-        width: 70%;
-        height: 500px;
-    }
-
-    .loginBeforeAnimate {
-        margin-top: 900px;
-        transition: all 2s ease;
-    }
-
-    .loginLogo {
-        height: 30%;
-        width: 30%;
-        position: absolute;
-        top: 60px;
-    }
-
-    .loginLogo img {
+    form.loginForm {
         width: 100%;
     }
 
-    .loginLogoBeforeAnimate {
-        padding-bottom: 0px;
-        transition: all 2s ease;
-    }
 
-    .login h1 {
-        font-size: 45px;
-    }
-
-    .loginForm label {
-        font-size: 20px;
-    }
-
-    .loginForm input {
-        font-size: 16px;
-    }
-
-    .loginButton {
-        padding: 10px;
-        width: 30%;
-    }
-
-} */
-
-
-
-
-
-/* @media only screen and (min-device-width:320px) and (max-device-width:480px) {
-
-    .loginDiv {
-        flex-direction: column;
-        margin-top: 180px;
-        height: 100%;
-    }
-
-    .login {
-        width: 100%;
-        height: 400px;
-    }
-
-    .loginBeforeAnimate {
-        margin-top: 900px;
-        transition: all 2s ease;
-    }
-
-    .loginLogo {
-        height: 30%;
-        width: 40%;
-        position: absolute;
-        top: 40px;
-    }
-
-    .loginLogo img {
+    form.loginForm input {
         width: 100%;
     }
 
-    .loginLogoBeforeAnimate {
-        padding-bottom: 0px;
-        transition: all 2s ease;
-    }
-
-    .login h1 {
-        font-size: 35px;
-    }
-
-    .loginForm label {
-        font-size: 18px;
-    }
-
-    .loginForm input {
-        font-size: 12px;
+    form.loginForm .password-input-container {
         width: 100%;
     }
 
-    .loginButton {
-        padding: 10px;
-        width: 40%;
+    form.loginForm .password-input-container>input {
+        width: 90% !important;
+
     }
 
-    input[type="text"] {
-        width: 100% !important;
+    form.loginForm .forgot-password {
+        width: 100%;
+    }
+
+    form.loginForm .checkbox-row {
+        width: 100%;
+
+    }
+
+    form.loginForm .checkbox-row input#remember {
+        width: 14px;
+        height: 14px;
+    }
+
+    form.loginForm .button-row {
+        width: 100%;
+    }
+
+    form.loginButton {
+        width: 100%;
+    }
+
+    form.loginForm .header {
+        width: 100%;
     }
 
 
-} */
+
+}
