--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,77 @@ body {
   background-color: rgb(0, 0, 38) !important;
   color: white !important;
 }
+
+.eye-btn-div {
+  margin-left: 5px;
+}
+
+.eye-btn {
+  width: 16px;
+  height: 16px;
+  background-color: rgb(215, 215, 215);
+  border: none;
+  border-radius: 50%;
+  color: #1E2559;
+  transform: translateY(-80%);
+  font-size: 10px;
+  align-self: flex-start;
+  font-weight: 600;
+}
+
+.eye-btn:hover {
+  background-color: rgb(195, 195, 195);
+  color: #1E2559;
+}
+
+.eye-text {
+  width: 50%;
+  position: absolute;
+  top: 0;
+  transform: translate(0%, -105%);
+  font-size: 12px;
+  color: #222;
+  background-color: rgb(218, 218, 218);
+  padding: 8px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px rgba(32, 32, 32, 0.75);
+  z-index: 1;
+}
+
+.eye-text>p {
+  margin: 0;
+}
+
+
+.modal_div {
+  background: #1e255997 !important;
+  backdrop-filter: blur(4px) !important;
+  -webkit-backdrop-filter: blur(4px) !important;
+  border-radius: 10px !important;
+}
+
+.wallet-modal__body {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.wallet-modal__body__item__btn {
+  width: 300px;
+  padding: 5px;
+  background: #1e255997 !important;
+  border: 1px solid #1e255997 !important;
+  color: #fff !important;
+  border-radius: 10px !important;
+  font-size: 1rem !important;
+  font-weight: 600 !important;
+  cursor: pointer;
+}
+
+.wallet-modal__body__item__btn:hover img {
+  transform: scale(1.1);
+}
